--- a/code/algorithm/CMakeLists.txt
+++ b/code/algorithm/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES
 add_library(${PROJECT_NAME} ${SOURCES})
 add_library(schedule::algorithm ALIAS ${PROJECT_NAME})
 
+include_directories(../structs/include)
 
 target_include_directories(${PROJECT_NAME}
         PUBLIC ${PROJECT_SOURCE_DIR}/include)
