--- a/code/structs/CMakeLists.txt
+++ b/code/structs/CMakeLists.txt
@@ -1,11 +1,12 @@
 project(structs)
 
 set(SOURCES
-        src/graph.cc
-        src/task.cc
-        src/device.cc)
+        src/graph/graph.cc
+        src/task/task.cc
+        src/device/device.cc
+        )
 
-add_library(${PROJECT_NAME} ${SOURCES})
+add_library(${PROJECT_NAME} STATIC ${SOURCES})
 add_library(schedule::structs ALIAS ${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME}
