--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/cmake-build-debug/
-/cmake-build-debug-coverage/
+/code/cmake-build-debug/
+/code/cmake-build-debug-coverage/
 /.idea/
+/code/.idea/
 
 .DS_Store
